--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -80,6 +80,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=Week4_Lab_1.war
+war.name=Week6Lab1.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
