--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -17,7 +17,7 @@
     
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/Login</url-pattern>
+        <url-pattern>/login</url-pattern>
     </servlet-mapping>
     
     <servlet-mapping>
@@ -26,7 +26,7 @@
     </servlet-mapping>
     
     <welcome-file-list>
-        <welcome-file>Home</welcome-file>
+        <welcome-file>login</welcome-file>
     </welcome-file-list>
     
     <session-config>
